src/test/deca/syntax/invalid/provided/perso/invalid_expr.deca
{
    int x = 10 + ; // Erreur : opérateur sans opérande droit
}
